tests/NormalTests/paczka2/big_fuzzy/42064570.err
Error in line 3: uVFXDN3MK A521 86,1
Error in line 32: r3j9RNSS5g A521 111,0
Error in line 34: we4FazyIj A756 43,4
Error in line 38: r3j9RNSS5g S241 9,5
Error in line 37: QyQ A756 179,0
Error in line 51: QyQ A535 72,0
Error in line 55: A535 A756 49,5
Error in line 64: uVFXDN3MK A521 49,5
Error in line 70: 5rovyytBzS A756 8,6
Error in line 69: uVFXDN3MK S241 81,5
Error in line 71: 5rovyytBzS A521 70,5
Error in line 67: r3j9RNSS5g S241 320,4
Error in line 99: r3j9RNSS5g A535 3,3
Error in line 102: uVFXDN3MK S241 1,3
Error in line 101: r3j9RNSS5g S241 15,3
Error in line 93: we4FazyIj S241 108,3
Error in line 127: QyQ S241 3,2
Error in line 120: 5rovyytBzS A521 9,5
Error in line 151: A535 A756 71,5
Error in line 154: aDU A756 6,5
Error in line 150: r3j9RNSS5g A521 1,6
Error in line 156: aDU A535 63,1
Error in line 159: uVFXDN3MK A535 61,8
Error in line 163: uVFXDN3MK A521 16,2
Error in line 153: A535 A535 89,0
Error in line 167: A535 A756 95,6
Error in line 139: QyQ A535 51,7
Error in line 190: aDU e535 248,7
Error in line 165: 5rovyytBzS A756 79,7
Error in line 192: QyQ A535 60,9
Error in line 198: r3j9RNSS5g A535 14,2
Error in line 199: we4FazyIj A756 94,2
Error in line 188: uVFXDN3MK S241 20,9
Error in line 205: we4FazyIj A535 19,1
Error in line 206: QyQ A535 77,4
Error in line 217: A535 A756 71,2
Error in line 208: uVFXDN3MK A535 18,6
Error in line 214: QyQ A756 56,8
Error in line 223: QyQ A535 74,1
Error in line 225: QyQ A521 8,1
Error in line 221: A535 S241 99,2
Error in line 234: r3j9RNSS5g S241 81,6
